# nested-countries

./: .gitignore  README.md  pyproject.toml
docs/: index.html
scripts/: _bootstrap.py  build_dashboard.py  build_shapes.py  compute_edges.py  download_data.py  find_chains.py  verify_chain.py
src/nested_countries/: __init__.py  config.py  containment.py  dashboard.py  data.py  geometry_modes.py  graph_search.py  io.py  models.py  projections.py  visualize.py
templates/: dashboard.html.j2
tests/: test_containment_basic.py  test_geometry_modes.py  test_graph_search.py
